Add intent for FB, Insta (for apps and webs) and maps; new TextView (description); slightly changes in layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,22 +16,17 @@
             android:layout_height="@dimen/image_size"
             android:contentDescription="@string/image_description"
             android:scaleType="centerCrop"
-            android:src="@drawable/ksiazka_zeszyt" />
+            android:src="@drawable/reading_writing" />
 
         <TextView
             style="@style/textStyles"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/nazwa_firmy"
-            android:textSize="@dimen/text_bigger"
-            android:textStyle="bold" />
+            android:text="@string/company_name"
+            android:textSize="@dimen/text_bigger" />
 
         <TextView
             style="@style/textStyles"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/redakcja_korekta"
-            android:textStyle="bold" />
+            android:text="@string/company_description"
+            android:paddingBottom="@dimen/small_padding"/>
 
         <TextView
             style="@style/textStyles.Clickable"
@@ -50,20 +45,24 @@
             style="@style/textStyles.Clickable"
             android:drawableStart="@drawable/web_icon"
             android:onClick="openSite"
-            android:text="@string/www" />
+            android:text="@string/www_address" />
 
         <TextView
             android:id="@+id/facebook_txt"
             style="@style/textStyles.Clickable"
             android:drawableStart="@drawable/facebook"
-            android:onClick="openFB"
-            android:text="@string/pic_fb" />
+            android:text="@string/company_fb" />
 
         <TextView
             android:id="@+id/instagram_txt"
             style="@style/textStyles.Clickable"
             android:drawableStart="@drawable/instagram"
             android:onClick="openInstagram"
-            android:text="@string/pic_instagram" />
+            android:text="@string/company_instagram" />
+
+        <TextView
+            style="@style/textStyles"
+            android:text="@string/write_us"
+            android:paddingTop="@dimen/small_padding"/>
     </LinearLayout>
 </ScrollView>
