--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#9A4B3A</color>
-    <color name="colorPrimaryDark">#9A4B3A</color>
+    <color name="colorPrimaryDark">#623025</color>
     <color name="colorAccent">#990000</color>
     <color name="colorText">#000000</color>
     <color name="colorBackground">#ffffff</color>
