--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="margin_bottom">12dp</dimen>
+    <dimen name="small_padding">12dp</dimen>
     <dimen name="drawable_padding">16dp</dimen>
-    <dimen name="side_paddings">24dp</dimen>
+    <dimen name="medium_padding">24dp</dimen>
+    <dimen name="large_padding">56dp</dimen>
     <dimen name="image_size">250dp</dimen>
     <dimen name="text_size">16sp</dimen>
-    <dimen name="text_bigger">18sp</dimen>
+    <dimen name="text_bigger">24sp</dimen>
 </resources>
